@@ -1,3 +1,7 @@
+2017-07-27  Araki Ken  <arakiken@users.sf.net>
+
+	* fb/ui_font.c: Wrong processing of percentage in fontname is fixed.
+
 2017-07-23  Araki Ken  <arakiken@users.sf.net>
 
 	* man/mlterm.1, README.ja, PROTOCOL: Updated.
